<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:src="@drawable/dummy_crew_picture" />

            <TextView
                android:id="@+id/name"
                style="@style/headerTextBoldNoUnderline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ROMANENKO ROMAN YURIEVICH" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="Soyuz TMA-M commander
ISS flight engineer
3rd class test-cosmonaut
Deputy Chief of the Roscosmos Cosmonaut Office
Colonel of the Russian Air Force, retired
495th cosmonaut of the world
103rd cosmonaut of the Russian Federation"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            style="@style/HeaderTextItalicNoUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data" />

        <TextView
            android:id="@+id/personal_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_personal_data"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/education"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_education"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/experience"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_experience"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/spaceflight_training"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/spacelight_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_spacelight_training"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/crew_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/spaceflight_experience"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/spacelight_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_spacelight_experience"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/awards"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/awards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_awards"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/crew_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/hobbies"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/dummy_hobbies"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>